--- a/package.json
+++ b/package.json
@@ -8,14 +8,7 @@
   "repository": "dropbox/zxcvbn",
   "scripts": {
     "test": "coffeetape test/*.coffee | faucet",
-    "test-saucelabs": "zuul -- test/*.coffee",
-    "build": "npm run build-lib ; npm run build-dist",
-    "watch": "npm run watch-lib & npm run watch-dist",
-    "build-lib": "coffee -o lib --compile --bare --map src/*.coffee",
-    "watch-lib": "coffee -o lib --compile --bare --map --watch src/*.coffee",
-    "build-dist": "browserify --debug  --standalone zxcvbn -t coffeeify --extension='.coffee' -t uglifyify src/main.coffee |   exorcist --base . dist/zxcvbn.js.map >| dist/zxcvbn.js",
-    "watch-dist": "watchify --debug -v --standalone zxcvbn -t coffeeify --extension='.coffee' -t uglifyify src/main.coffee -o 'exorcist --base . dist/zxcvbn.js.map >| dist/zxcvbn.js'",
-    "prepublish": "npm run build"
+    "test-saucelabs": "zuul -- test/*.coffee"
   },
   "devDependencies": {
     "browserify": "^11.0.1",
